--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@uploadthing/react": "^7.3.2",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
+    "mongoose": "^8.17.1",
     "next": "15.4.5",
     "nextjs-toploader": "^3.8.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "uploadthing": "^7.7.3",
+    "zod": "^4.0.16"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
