--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
+    "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.8",
     "@uploadthing/react": "^7.3.2",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "mongoose": "^8.17.1",
@@ -22,6 +26,8 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "slugify": "^1.6.6",
     "uploadthing": "^7.7.3",
     "zod": "^4.0.16"
   },
