--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.8",
     "@uploadthing/react": "^7.3.2",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "mongoose": "^8.17.1",
     "next": "15.4.5",
+    "next-auth": "^4.24.11",
     "nextjs-toploader": "^3.8.16",
     "react": "19.1.0",
     "react-dom": "19.1.0",
