fix: remove console log from admin dashboard page

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ UPLOADTHING_TOKEN=
 # TELEGRAM
 NEXT_PUBLIC_TELEGRAM_BOT_API=
 NEXT_PUBLIC_TELEGRAM_CHAT_ID=
+
+# NEXT_AUTH
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
